# GreenAlgorithms4HPC

./: .gitignore  GA_changes.md  GA_recipe.md  GreenAlgorithms_global.py  GreenAlgorithms_workloadManager.py  README.md  __init__.py  additional_stats.py  cluster_info.yaml  cluster_info_template.yaml  fixed_parameters.yaml  green-algo-batch.sh  myCarbonFootprint.sh  myCarbonFootprint_Alma.sh  pyproject.toml  requirements.txt  run-GA-Alma.sh  test.sh
.github/workflows/: issues.yml  label.yml
backend/: __init__.py  helpers.py  slurm_extract.py
data/: cluster_info.yaml
example_files/: example_output_workloadManager.csv  example_output_workloadManager.tsv  example_sacctOutput_raw.csv  example_sacctOutput_raw.tsv
examples/: example_sacctOutput_raw.txt  example_sacctOutput_raw_asDF.tsv
frontend/: __init__.py  dashboard_output.py  terminal_output.py
github/workflow/: issues.yml  label.yml
greenalgorithms4HPC/: __init__.py
greenalgorithms4HPC/backend/: __init__.py  slurm_extract.py
greenalgorithms4HPC/data/: fixed_parameters.yaml
greenalgorithms4HPC/frontend/: __init__.py  dashboard_output.py  helpers.py  terminal_output.py
greenalgorithms4HPC/frontend/templates/: _user.html  report_blank.html  styles.css
